--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -102,4 +102,12 @@
         android:onClick="getRtpi"
         android:text="@string/search" />
 
+    <TableLayout
+        android:id="@+id/tableLayout1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/button3"
+        android:layout_centerHorizontal="true" >
+    </TableLayout>
+
 </RelativeLayout>
