added camera functionality

--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -36,4 +36,23 @@
         android:onClick="getRtpi"
         android:text="@string/search" />
 
+    <Button
+        android:id="@+id/takepicture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/search"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp"
+        android:onClick="takePicture"
+        android:text="@string/take_picture" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/takepicture"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="47dp"
+        android:src="@drawable/db_icon" />
+
 </RelativeLayout>
