added 'quick search' function

--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -55,4 +55,13 @@
         android:layout_marginTop="47dp"
         android:src="@drawable/db_icon" />
 
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:onClick="quickSearch"
+        android:text="Quick Search - 37" />
+
 </RelativeLayout>
