--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -48,6 +48,7 @@
 
     <ImageView
         android:id="@+id/imageView1"
+        android:contentDescription="@string/imgDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/takepicture"
@@ -62,6 +63,6 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:onClick="quickSearch"
-        android:text="Quick Search - 37" />
+        android:text="@string/quick" />
 
 </RelativeLayout>
