--- a/res/layout/fragment_image.xml
+++ b/res/layout/fragment_image.xml
@@ -10,11 +10,23 @@
 
     <ImageView
         android:id="@+id/imageView1"
+        android:contentDescription="@string/imgDesc"
         android:layout_width="200dp"
         android:layout_height="300dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:src="@drawable/db_icon" />
+    
+    <Button
+        android:id="@+id/back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="29dp"
+        android:onClick="goBack"
+        android:text="@string/back"
+        android:visibility="visible" />
 
 </RelativeLayout>
