--- a/res/layout/fragment_image.xml
+++ b/res/layout/fragment_image.xml
@@ -29,4 +29,12 @@
         android:text="@string/back"
         android:visibility="visible" />
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/imageView1"
+        android:layout_alignLeft="@+id/back"
+        android:text="@string/back" />
+
 </RelativeLayout>
