--- a/res/layout/fragment_image.xml
+++ b/res/layout/fragment_image.xml
@@ -17,24 +17,33 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:src="@drawable/db_icon" />
-    
+
     <Button
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="29dp"
+        android:layout_alignLeft="@+id/imageView1"
+        android:layout_below="@+id/imageView1"
+        android:layout_marginTop="21dp"
         android:onClick="goBack"
         android:text="@string/back"
         android:visibility="visible" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/back"
+        android:layout_alignRight="@+id/imageView1"
+        android:onClick="getRtpi"
+        android:text="@string/search" />
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/imageView1"
-        android:layout_alignLeft="@+id/back"
+        android:layout_centerHorizontal="true"
         android:text="@string/back" />
 
 </RelativeLayout>
