--- a/res/layout/fragment_image.xml
+++ b/res/layout/fragment_image.xml
@@ -8,7 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.visionapp.ImageActivity$PlaceholderFragment" >
 
-    <ImageView
+    <!-- <ImageView
         android:id="@+id/imageView1"
         android:contentDescription="@string/imgDesc"
         android:layout_width="200dp"
@@ -44,6 +44,6 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/imageView1"
         android:layout_centerHorizontal="true"
-        android:text="@string/back" />
+        android:text="@string/back" /> -->
 
 </RelativeLayout>
