--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -8,7 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.visionapp.MainActivity$PlaceholderFragment" >
     
-    <TextView
+    <!-- <TextView
         android:id="@+id/stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -63,6 +63,6 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:onClick="quickSearch"
-        android:text="@string/quick" />
+        android:text="@string/quick" /> -->
 
 </RelativeLayout>
