--- a/res/layout/fragment_image.xml
+++ b/res/layout/fragment_image.xml
@@ -8,16 +8,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.visionapp.ImageActivity$PlaceholderFragment" >
 
-    <!-- <ImageView
-        android:id="@+id/imageView1"
-        android:contentDescription="@string/imgDesc"
-        android:layout_width="200dp"
-        android:layout_height="300dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:src="@drawable/db_icon" />
-
     <Button
         android:id="@+id/back"
         android:layout_width="wrap_content"
@@ -42,8 +32,18 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/imageView1"
+        android:layout_below="@+id/imageView1"
         android:layout_centerHorizontal="true"
-        android:text="@string/back" /> -->
+        android:text="@string/back" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="200dp"
+        android:layout_height="300dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:contentDescription="@string/imgDesc"
+        android:src="@drawable/db_icon" />
 
 </RelativeLayout>
