--- a/res/layout/fragment_results.xml
+++ b/res/layout/fragment_results.xml
@@ -8,7 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.visionapp.ResultsActivity$PlaceholderFragment" >
     
-    <!-- <TableLayout
+    <TableLayout
         android:id="@+id/tableLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,6 +27,6 @@
         android:layout_marginBottom="29dp"
         android:onClick="goBack"
         android:text="@string/back"
-        android:visibility="visible" /> -->
+        android:visibility="visible" />
 
 </RelativeLayout>
