--- a/res/layout/fragment_image.xml
+++ b/res/layout/fragment_image.xml
@@ -12,38 +12,48 @@
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageView1"
-        android:layout_below="@+id/imageView1"
-        android:layout_marginTop="21dp"
+        android:layout_alignBottom="@+id/search"
+        android:layout_alignLeft="@+id/cameraResult"
         android:onClick="goBack"
         android:text="@string/back"
         android:visibility="visible" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/back"
-        android:layout_alignRight="@+id/imageView1"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/cameraResult"
+        android:layout_marginBottom="43dp"
         android:onClick="getRtpi"
         android:text="@string/search" />
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView1"
-        android:layout_centerHorizontal="true"
-        android:text="@string/back" />
-
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/cameraResult"
         android:layout_width="200dp"
         android:layout_height="300dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:contentDescription="@string/imgDesc"
-        android:src="@drawable/db_icon" />
+        android:contentDescription="@string/resultDesc" />
+
+    <TextView
+        android:id="@+id/askStopNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/stopNumber"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:text="@string/askStopNumber"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/stopNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/back"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:text="@string/resultDesc"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </RelativeLayout>
