limited results to only print out first 10 (if applicable)

--- a/res/layout/fragment_results.xml
+++ b/res/layout/fragment_results.xml
@@ -15,7 +15,9 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="58dp"
-        android:visibility="visible" >
+        android:visibility="visible"
+        android:textAppearance="?android:attr/textAppearanceMedium" >
+
     </TableLayout>
 
     <Button
