removed quick search button

--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -38,5 +38,14 @@
         android:gravity="center"
         android:text="@string/launchText"
         android:textAppearance="?android:attr/textAppearanceMedium" />
+    
+    <!-- <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:onClick="quickSearch"
+        android:text="Quick" /> -->
 
 </RelativeLayout>
